# co_fs

./: .clang-format  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/co_fs/: co_fs.hpp
test/: CMakeLists.txt
test/source/: co_fs_test.cpp
